--- a/MVVM_Test/App.xaml
+++ b/MVVM_Test/App.xaml
@@ -1,7 +1,8 @@
 ﻿<Application x:Class="MVVM_Test.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:MVVM_Test">
+             xmlns:local="clr-namespace:MVVM_Test"
+             StartupUri="View/MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
