--- a/MVVM_Test/View/MainWindow.xaml
+++ b/MVVM_Test/View/MainWindow.xaml
@@ -4,8 +4,12 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MVVM_Test"
+        xmlns:viewmodel="clr-namespace:MVVM_Test.ViewModel"
         mc:Ignorable="d"
         Title="MainWindow" Height="170" Width="400">
+    <Window.DataContext>
+        <viewmodel:MainWindowViewModel/>
+    </Window.DataContext>
     <Grid>
         <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Margin="12,12,0,0" 
                    Text="First name"/>
@@ -21,7 +25,6 @@
                  Text="{Binding Path=People.FirstName, Mode=TwoWay}" IsReadOnly="True" />
         <TextBox HorizontalAlignment="Left" VerticalAlignment="Top" Margin="246,49,0,0" Width="120"
                  Text="{Binding Path=People.LastName, Mode=TwoWay}" IsReadOnly="True" />
-
         <Button Content="Click me" HorizontalAlignment="Left" Margin="291,97,0,0" VerticalAlignment="Top" Width="75" Command="{Binding ClickCommand}" />
     </Grid>
 </Window>
