--- a/ScreamControl_Client/Language/lang.ru-RU.xaml
+++ b/ScreamControl_Client/Language/lang.ru-RU.xaml
@@ -18,7 +18,7 @@
     <v:String x:Key="m_VolumeSystem">Системная громкость</v:String>
     <!-- Connection info strings -->
     <v:String x:Key="mc_Initializing">Инициализация сервиса...</v:String>
-    <v:String x:Key="mc_Ready">Сервис готов, ждём контроллера</v:String>
-    <v:String x:Key="mc_Connected">Контроллер подключен, идёт передача данных</v:String>
-    <v:String x:Key="mc_Disconnected">Контроллер отключился</v:String>
+    <v:String x:Key="mc_Ready">Сервис готов, ждём контроллер...</v:String>
+    <v:String x:Key="mc_Connected">Контроллер подключен, идёт передача данных.</v:String>
+    <v:String x:Key="mc_Disconnected">Контроллер отключился.</v:String>
 </ResourceDictionary>
