--- a/ScreamControl.View/MainWindow.xaml
+++ b/ScreamControl.View/MainWindow.xaml
@@ -1,22 +1,20 @@
 ﻿<local:ExtendedMetroWindow
-    BorderBrush="{DynamicResource AccentColorBrush}"
+        BorderBrush="{DynamicResource AccentColorBrush}"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:local="clr-namespace:ScreamControl_Client.View"
-        xmlns:databinding="clr-namespace:ScreamControl_Client"
+        xmlns:local="clr-namespace:ScreamControl.View"
+        
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:res="Resources.xml"
+        xmlns:res="ViewStyles.xaml"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:Ei="http://schemas.microsoft.com/expression/2010/interactions"
         xmlns:Inter="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
-        xmlns:Properties="clr-namespace:ScreamControl_Client.Properties"
-        xmlns:System="clr-namespace:System;assembly=mscorlib" x:Name="wMain" x:Class="ScreamControl_Client.View.MainWindow"
-        xmlns:ViewModel="clr-namespace:ScreamControl_Client.ViewModel"
+        xmlns:System="clr-namespace:System;assembly=mscorlib" x:Name="wMain" x:Class="ScreamControl.View.MainWindow"
         Title="Scream Control" Closing="Window_Closing" Closed="wMain_Closed" SizeToContent="Height" Width="452" StateChanged="wMain_StateChanged" 
         ShowMaxRestoreButton="False" BorderThickness="1"
         Visibility="{Binding WindowVisibilityState}" CloseTrigger="{Binding CloseTrigger}" ResizeMode="CanMinimize" SizeChanged="wMain_SizeChanged" Loaded="Window_Loaded">
-    <Controls:MetroWindow.DataContext>
+    <!--<Controls:MetroWindow.DataContext>
         <ViewModel:MainViewModel/>
-    </Controls:MetroWindow.DataContext>
+    </Controls:MetroWindow.DataContext>-->
     <Inter:Interaction.Triggers>
         <Inter:EventTrigger EventName="Loaded">
             <Inter:InvokeCommandAction Command="{Binding LoadedCommand}"/>
@@ -26,87 +24,90 @@
             <!--<Inter:InvokeCommandAction Command="{Binding ClosingCommand}"  />-->
         </Inter:EventTrigger>
     </Inter:Interaction.Triggers>
+    <!--xmlns:databinding="clr-namespace:ScreamControl"-->
     <local:ExtendedMetroWindow.Resources>
-        <databinding:TimerValueConverter x:Key="TimerValueConverter"/>
-        <databinding:ConnectionInfoConverter x:Key="ConnectionInfoConverter"/>
-        <databinding:BindingProxy x:Key="SoundAlertHeaderProxy" Data="{DynamicResource m_SoundAlertExpander}"/>
-        <databinding:BindingProxy x:Key="MessageAlertHeaderProxy" Data="{DynamicResource m_MessageAlertExpander}"/>
-        <databinding:BindingProxy x:Key="DelayElapsedFinishProxy" Data="{DynamicResource m_DelayElapsedFinish}"/>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="ViewStyles.xaml"/>
+                
+            </ResourceDictionary.MergedDictionaries>
+            <local:TimerValueConverter x:Key="TimerValueConverter"/>
+            <local:ConnectionInfoConverter x:Key="ConnectionInfoConverter"/>
+            <local:BindingProxy x:Key="SoundAlertHeaderProxy" Data="{DynamicResource m_SoundAlertExpander}"/>
+            <local:BindingProxy x:Key="MessageAlertHeaderProxy" Data="{DynamicResource m_MessageAlertExpander}"/>
+            <local:BindingProxy x:Key="DelayElapsedFinishProxy" Data="{DynamicResource m_DelayElapsedFinish}"/>
 
-        <!--<databinding:BindingProxy x:Key="mcProxy_Init" Data="{DynamicResource mc_Initializing}"/>
-        <databinding:BindingProxy x:Key="mcProxy_Ready" Data="{DynamicResource mc_Ready}"/>
-        <databinding:BindingProxy x:Key="mcProxy_Connected" Data="{DynamicResource mc_Connected}"/>
-        <databinding:BindingProxy x:Key="mcProxy_Disconnected" Data="{DynamicResource mc_Disconnected}"/>-->
+            <local:ToUpperConverter x:Key="ToUpperConverter"/>
+            <SolidColorBrush x:Key="UnheckedToggleSwitchBrush" Color="#7A7574"/>
+            <SolidColorBrush x:Key="CheckedToggleSwitchBrush" Color="#FF4343"/>
 
-        <databinding:ToUpperConverter x:Key="ToUpperConverter"/>
-        <SolidColorBrush x:Key="UnheckedToggleSwitchBrush" Color="#7A7574"/>
-        <SolidColorBrush x:Key="CheckedToggleSwitchBrush" Color="#FF4343"/>
+            <Style x:Key="SliderButtonStyle" TargetType="{x:Type RepeatButton}">
+                <Setter Property="SnapsToDevicePixels" Value="true"/>
+                <Setter Property="OverridesDefaultStyle" Value="true"/>
+                <Setter Property="IsTabStop" Value="false"/>
+                <Setter Property="Focusable" Value="false"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type RepeatButton}">
+                            <Border >
+                                <Border.Background>
+                                    <SolidColorBrush Opacity="0"/>
+                                </Border.Background>
+                            </Border>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
 
-        <Style x:Key="SliderButtonStyle" TargetType="{x:Type RepeatButton}">
-            <Setter Property="SnapsToDevicePixels" Value="true"/>
-            <Setter Property="OverridesDefaultStyle" Value="true"/>
-            <Setter Property="IsTabStop" Value="false"/>
-            <Setter Property="Focusable" Value="false"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type RepeatButton}">
-                        <Border >
-                            <Border.Background>
-                                <SolidColorBrush Opacity="0"/>
-                            </Border.Background>
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-
-        <Style x:Key="ProgressSliderThumb" TargetType="{x:Type Thumb}">
-            <Setter Property="OverridesDefaultStyle" Value="True"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type Thumb}">
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto"/>
-                                <ColumnDefinition/>
-                            </Grid.ColumnDefinitions>
-                            <Border BorderBrush="Red" BorderThickness="1" Height="2" VerticalAlignment="Center" Background="Red" Cursor="SizeNS" Grid.Column="1"/>
-                            <Rectangle Margin="-2,-5" Cursor="SizeNS" Fill="#00000000" Grid.Column="1"/>
-                        </Grid>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-        <Style x:Key="ProgressSlider" TargetType="{x:Type Slider}">
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type Slider}">
-                        <Border BorderThickness="1" BorderBrush="{DynamicResource {x:Static SystemColors.InactiveBorderBrushKey}}" >
+            <Style x:Key="ProgressSliderThumb" TargetType="{x:Type Thumb}">
+                <Setter Property="OverridesDefaultStyle" Value="True"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type Thumb}">
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="Auto"/>
-                                    <ColumnDefinition Width="*" MinWidth="{TemplateBinding MinWidth}"/>
+                                    <ColumnDefinition/>
                                 </Grid.ColumnDefinitions>
-                                <TickBar x:Name="TopTick" Visibility="Collapsed" Placement="Left" Grid.Column="0"/>
-                                <TickBar x:Name="BottomTick" Visibility="Collapsed" Placement="Right" Grid.Column="0"/>
-                                <Border x:Name="TrackBackground"  Margin="5,0" HorizontalAlignment="Stretch" Width="Auto" Grid.Column="1" Background="#FF0CFF00" Visibility="Collapsed" />
-                                <Track x:Name="PART_Track" Grid.Column="1">
-                                    <Track.DecreaseRepeatButton>
-                                        <RepeatButton x:Name="decreaseButton" Style="{StaticResource SliderButtonStyle}" Command="{x:Static Slider.DecreaseLarge}"/>
-                                    </Track.DecreaseRepeatButton>
-                                    <Track.IncreaseRepeatButton>
-                                        <RepeatButton Style="{StaticResource SliderButtonStyle}" Command="{x:Static Slider.IncreaseLarge}"/>
-                                    </Track.IncreaseRepeatButton>
-                                    <Track.Thumb>
-                                        <Thumb Style="{StaticResource ProgressSliderThumb}" x:Name="Thumb" Background="Black"/>
-                                    </Track.Thumb>
-                                </Track>
+                                <Border BorderBrush="Red" BorderThickness="1" Height="2" VerticalAlignment="Center" Background="Red" Cursor="SizeNS" Grid.Column="1"/>
+                                <Rectangle Margin="-2,-5" Cursor="SizeNS" Fill="#00000000" Grid.Column="1"/>
                             </Grid>
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+            <Style x:Key="ProgressSlider" TargetType="{x:Type Slider}">
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type Slider}">
+                            <Border BorderThickness="1" BorderBrush="{DynamicResource {x:Static SystemColors.InactiveBorderBrushKey}}" >
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="*" MinWidth="{TemplateBinding MinWidth}"/>
+                                    </Grid.ColumnDefinitions>
+                                    <TickBar x:Name="TopTick" Visibility="Collapsed" Placement="Left" Grid.Column="0"/>
+                                    <TickBar x:Name="BottomTick" Visibility="Collapsed" Placement="Right" Grid.Column="0"/>
+                                    <Border x:Name="TrackBackground"  Margin="5,0" HorizontalAlignment="Stretch" Width="Auto" Grid.Column="1" Background="#FF0CFF00" Visibility="Collapsed" />
+                                    <Track x:Name="PART_Track" Grid.Column="1">
+                                        <Track.DecreaseRepeatButton>
+                                            <RepeatButton x:Name="decreaseButton" Style="{StaticResource SliderButtonStyle}" Command="{x:Static Slider.DecreaseLarge}"/>
+                                        </Track.DecreaseRepeatButton>
+                                        <Track.IncreaseRepeatButton>
+                                            <RepeatButton Style="{StaticResource SliderButtonStyle}" Command="{x:Static Slider.IncreaseLarge}"/>
+                                        </Track.IncreaseRepeatButton>
+                                        <Track.Thumb>
+                                            <Thumb Style="{StaticResource ProgressSliderThumb}" x:Name="Thumb" Background="Black"/>
+                                        </Track.Thumb>
+                                    </Track>
+                                </Grid>
+                            </Border>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+        </ResourceDictionary>
+      
 
     </local:ExtendedMetroWindow.Resources>
 
@@ -188,10 +189,10 @@
                                 </Style.Triggers>
                             </Style>-->
                             <Label.Content>
-                            <MultiBinding Converter="{StaticResource TimerValueConverter}">
-                                <Binding Path="SoundTimerValue" />
-                                <Binding Source="{StaticResource DelayElapsedFinishProxy}" Path="Data" />
-                            </MultiBinding>
+                                <MultiBinding Converter="{StaticResource TimerValueConverter}">
+                                    <Binding Path="SoundTimerValue" />
+                                    <Binding Source="{StaticResource DelayElapsedFinishProxy}" Path="Data" />
+                                </MultiBinding>
                             </Label.Content>
                         </Label>
                         <Controls:ToggleSwitch x:Name="tsSoundAlertSwitch" OnSwitchBrush="{StaticResource CheckedToggleSwitchBrush}" OffSwitchBrush="{StaticResource UnheckedToggleSwitchBrush}" Foreground="White" FontSize="12" FontFamily="Segoe UI" Controls:ControlsHelper.HeaderFontSize="12" Controls:ControlsHelper.HeaderMargin="0" OffLabel="{DynamicResource m_Off}" OnLabel="{DynamicResource m_On}" ThumbIndicatorWidth="12"  Margin="0" HorizontalAlignment="Right" VerticalAlignment="Center" Cursor="Hand" Padding="0" IsChecked="{Binding IsSoundAlertEnabled}" />
