--- a/ScreamControl_Client/App.xaml
+++ b/ScreamControl_Client/App.xaml
@@ -2,11 +2,10 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:properties="clr-namespace:ScreamControl_Client.Properties"
-             StartupUri="View/MainWindow.xaml" LoadCompleted="Application_LoadCompleted" Startup="Application_Startup">
+             LoadCompleted="Application_LoadCompleted" Startup="Application_Startup">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Resources.xaml"/>
                 <ResourceDictionary Source="Language/lang.en-US.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
@@ -15,6 +14,7 @@
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/FlatSlider.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <SolidColorBrush x:Key="OverlayLabelBG" Color="#FFFFF300" Opacity="0.75"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
