--- a/ScreamControl.View/MainWindow.xaml
+++ b/ScreamControl.View/MainWindow.xaml
@@ -2,7 +2,6 @@
         BorderBrush="{DynamicResource AccentColorBrush}"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:local="clr-namespace:ScreamControl.View"
-        
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:res="ViewStyles.xaml"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
@@ -21,10 +20,8 @@
         </Inter:EventTrigger>
         <Inter:EventTrigger EventName="Closing">
             <Ei:CallMethodAction TargetObject="{Binding}" MethodName="ClosingMethod"/>
-            <!--<Inter:InvokeCommandAction Command="{Binding ClosingCommand}"  />-->
         </Inter:EventTrigger>
     </Inter:Interaction.Triggers>
-    <!--xmlns:databinding="clr-namespace:ScreamControl"-->
     <local:ExtendedMetroWindow.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -58,7 +55,6 @@
                     </Setter.Value>
                 </Setter>
             </Style>
-
             <Style x:Key="ProgressSliderThumb" TargetType="{x:Type Thumb}">
                 <Setter Property="OverridesDefaultStyle" Value="True"/>
                 <Setter Property="Template">
@@ -127,18 +123,20 @@
 
 
         <Grid x:Name="gControllerBlock" Grid.RowSpan="3" Grid.ColumnSpan="2" Panel.ZIndex="10" Grid.Row="1" Background="#BFFFFFFF" Visibility="{Binding IsControlsBlocked, Mode=OneWay}">
-            <TextBlock Text="{DynamicResource m_ControllerBlock}" VerticalAlignment="Center" HorizontalAlignment="Center" FontWeight="SemiBold" Padding="5">
-                <TextBlock.Background>
-                    <SolidColorBrush Color="Red" Opacity="0.1"/>
-                </TextBlock.Background>
-            </TextBlock>
+            <ContentPresenter Content="{DynamicResource BlockingGridContent}"/>
         </Grid>
         <Grid Background="#BFFFFFFF" Panel.ZIndex="10" Grid.Column="1" Visibility="{Binding Visibility, ElementName=gControllerBlock}"></Grid>
 
         <!-- Connection Info -->
         <Border BorderBrush="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}" BorderThickness="0,0,0,1"/>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-            <Label x:Name="lConnectionStatus" Content="{Binding CurrentConnectionState, Converter={StaticResource ConnectionInfoConverter}, ConverterParameter=mc_}" HorizontalContentAlignment="Center" HorizontalAlignment="Center" Margin="2,0,0,2" VerticalContentAlignment="Center" VerticalAlignment="Center">
+            <Label x:Name="lConnectionStatus"  HorizontalContentAlignment="Center" HorizontalAlignment="Center" Margin="2,0,0,2" VerticalContentAlignment="Center" VerticalAlignment="Center">
+                <Label.Content>
+                    <MultiBinding Converter="{StaticResource ConnectionInfoConverter}">
+                        <Binding Path="CurrentConnectionState" />
+                        <Binding Path="ConnectionInfoStringsPrefix" />
+                    </MultiBinding>
+                </Label.Content>
             </Label>
             <Button x:Name="bNetworkRetry" Style="{StaticResource AccentedSquareButtonStyle}" Padding="10,5" VerticalAlignment="Center" Controls:ControlsHelper.ContentCharacterCasing="Normal" Margin="10,5,0,5" Background="#CC5DAA7C" BorderThickness="1" Visibility="Collapsed">Retry
             </Button>
