--- a/ScreamControl_Client/App.xaml
+++ b/ScreamControl_Client/App.xaml
@@ -2,11 +2,12 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:properties="clr-namespace:ScreamControl_Client.Properties"
+             xmlns:local="clr-namespace:ScreamControl_Client"
              LoadCompleted="Application_LoadCompleted" Startup="Application_Startup">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Language/lang.en-US.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/ScreamControl.View;component/Language/lang.en-US.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
@@ -15,6 +16,7 @@
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/FlatSlider.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <SolidColorBrush x:Key="OverlayLabelBG" Color="#FFFFF300" Opacity="0.75"/>
+            <local:BlockingGridContentView x:Key="BlockingGridContent"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
