--- a/ScreamControl_Control/View/BlockingGridContentView.xaml
+++ b/ScreamControl_Control/View/BlockingGridContentView.xaml
@@ -1,14 +1,14 @@
-﻿<UserControl x:Class="ScreamControl.BlockingGridContentView"
+﻿<UserControl x:Class="ScreamControl.Controller.BlockingGridContentView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ScreamControl_Client"
+             xmlns:local="clr-namespace:ScreamControl.Controller"
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <TextBlock Text="{DynamicResource m_ControllerBlock}" VerticalAlignment="Center" HorizontalAlignment="Center" FontWeight="SemiBold" Padding="5">
+        <TextBlock Text="{DynamicResource mh_Connected}" VerticalAlignment="Center" HorizontalAlignment="Center" FontWeight="SemiBold" Padding="5">
             <TextBlock.Background>
                 <SolidColorBrush Color="Red" Opacity="0.1"/>
             </TextBlock.Background>
