--- a/ScreamControl.View/Language/lang.ru-RU.xaml
+++ b/ScreamControl.View/Language/lang.ru-RU.xaml
@@ -16,9 +16,19 @@
     <v:String x:Key="m_Stealth">Включить скрытный режим</v:String>
     <v:String x:Key="m_Volume">Громкость</v:String>
     <v:String x:Key="m_VolumeSystem">Системная громкость</v:String>
-    <!-- Connection info strings -->
+    <!-- Client connection info strings -->
     <v:String x:Key="mc_Initializing">Инициализация сервиса...</v:String>
     <v:String x:Key="mc_Ready">Сервис готов, ждём контроллер...</v:String>
     <v:String x:Key="mc_Connected">Контроллер подключен, идёт передача данных.</v:String>
+    <v:String x:Key="mc_SettingReceived">Принята настройка: {0}. Новое значение: {1}</v:String>
     <v:String x:Key="mc_Disconnected">Контроллер отключился.</v:String>
+    <!--Parameters names-->
+    <!--TODO-->
+    <!--Controller connection info strings-->
+    <v:String x:Key="mh_Initializing">Инициализация контроллера...</v:String>
+    <v:String x:Key="mh_Ready">Поиск клиента...</v:String>
+    <v:String x:Key="mh_Connected">Подключен к клиенту, можно отправлять настройки</v:String>
+    <v:String x:Key="mh_Failed">Клиент не найден</v:String>
+    <v:String x:Key="mh_Disconnected">Клиент отключен.</v:String>
+    
 </ResourceDictionary>
