--- a/ScreamControl_Client/View/BlockingGridContentView.xaml
+++ b/ScreamControl_Client/View/BlockingGridContentView.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="ScreamControl.BlockingGridContentView"
+﻿<UserControl x:Class="ScreamControl.Client.BlockingGridContentView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ScreamControl"
+             xmlns:local="clr-namespace:ScreamControl.Client"
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
