--- a/ScreamControl_Control/App.xaml
+++ b/ScreamControl_Control/App.xaml
@@ -1,12 +1,13 @@
-﻿<Application x:Class="ScreamControl.App"
+﻿<Application x:Class="ScreamControl.Controller.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:properties="clr-namespace:ScreamControl.Properties"
-             xmlns:local="clr-namespace:ScreamControl"
+             xmlns:properties="clr-namespace:ScreamControl.Controller.Properties"
+             xmlns:local="clr-namespace:ScreamControl.Controller"
              LoadCompleted="Application_LoadCompleted" Startup="Application_Startup">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/ScreamControl.View;component/Language/lang.en-US.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
