--- a/ScreamControl.View/Language/lang.en-US.xaml
+++ b/ScreamControl.View/Language/lang.en-US.xaml
@@ -16,6 +16,9 @@
     <v:String x:Key="m_Stealth">Activate stealth mode</v:String>
     <v:String x:Key="m_Volume">Alarm volume</v:String>
     <v:String x:Key="m_VolumeSystem">System volume</v:String>
+    <!-- Popup info -->
+    <v:String x:Key="mp_Added">Application added to Windows autostart</v:String>
+    <v:String x:Key="mp_Readded">Application autostart reenabled</v:String>
     <!-- Client connection info strings -->
     <v:String x:Key="mc_Initializing">Service init...</v:String>
     <v:String x:Key="mc_Ready">Service ready, waiting for controller...</v:String>
